# proteinforge

./: pyproject.toml
.claude/: settings.local.json
.next/: trace  trace-build
.next/cache/: config.json
api/: chats.py  claude_sdk.py  jobs.py  logs.py  runner.py  server.py
frontend/: CLAUDE.md  package-lock.json  package.json  plan.md
frontend/app/: globals.css  layout.tsx
frontend/app/api/chat/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: agent-console.tsx  chat-list.tsx  chat-panel.tsx  iteration-slider.tsx  message-bubble.tsx  protein-viewer.tsx  render-carousel.tsx
frontend/lib/: api.ts
outputs/: design_unconditional_0.trb
outputs/2026-03-21/20-53-21/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/chats/: 0d40ffbb.json  2e6d3667a1c7.json  5ce4fc8f.json  5f119f7e.json  62acb5be0856.json  716e8aff.json  b5bd337f.json  bb743bcd.json  bd29d865.json  c92adfe2.json  ccaf3a8d0a8a.json  d1eb3e7561c7.json
outputs/logs/: 01afe57c84bb.json  137ca0049836.json  265d4c8b9608.json  38b879d16c3a.json  3c19f4f174a7.json  509fc8b7a5b0.json  5c2bd0402f89.json  c8257184f8c7.json  ccaf3a8d0a8a.json  d1eb3e7561c7.json  e41a37273e76.json
workspace/: README.md  visualize.py
workspace/inputs/: beta_rich_adj.pt  beta_rich_ss.pt  spiky_adj.pt  spiky_ss.pt
workspace/outputs/: barrel_0.trb  beta_sheet_0.trb  spiky_0.trb  test_0.trb
workspace/outputs/helix_barrel_iterations/: v1_0.trb  v2_0.trb  v3_0.trb  v3_1.trb  v3_2.trb  v4_0.trb  v4_1.trb  v4_2.trb  v5_0.trb  v5_1.trb  v5_2.trb  v5_3.trb  v5_4.trb
(+126 files in other folders)
