[project]
name = "rfdiffusion"
version = "1.1.0"
description = "RFdiffusion is an open source method for protein structure generation."
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "torch",
    "numpy",
    "hydra-core",
    "omegaconf",
    "pyrsistent",
    "scipy",
    "opt-einsum",
    "dgl @ https://data.dgl.ai/wheels/torch-2.4/cu124/dgl-2.4.0%2Bcu124-cp311-cp311-manylinux1_x86_64.whl",
    "icecream",
    "se3-transformer",
    "e3nn>=0.5",
    "pydantic>=2.0",
    "pandas",
    "claude-agent-sdk",
    "fastapi",
]

[tool.uv.sources]
se3-transformer = { path = "env/SE3Transformer", editable = true }
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
